--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,9 +19,18 @@ tauri-build = { version = "2", features = [] }
 
 [dependencies]
 tauri = { version = "2", features = [] }
+tauri-plugin-http = "2.4.3"
 tauri-plugin-shell = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 mime_guess = "2.0.5"
 tauri-plugin-persisted-scope = "2.0.3"
+local-ip-address = "0.5.6"
+mdns-sd = "0.7.4"
+chrono = "0.4.31"
+tokio = { version = "1.35.0", features = ["full"] }
+uuid = { version = "1.5.0", features = ["v4", "serde"] }
+reqwest = { version = "0.11.22", features = ["json", "blocking"] }
+axum = "0.7.4"
+hostname = "0.3.1"
 
