--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -33,4 +33,5 @@ uuid = { version = "1.5.0", features = ["v4", "serde"] }
 reqwest = { version = "0.11.22", features = ["json", "blocking"] }
 axum = "0.7.4"
 hostname = "0.3.1"
+tower = "0.4.13"
 
